refactor(server): :recycle: introducing record syntax of Java 17